src/index.css
:root {
  --primary-color: #865dff;
  --secondary-color: #e384ff;
  --background-color: #191825;
  --text-color: white;
  --missed-word-text-color: red;

  --primary-hover: #48318a;
}

/* */

body {
  margin: 0;
  font-family: Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  height: 100%;

  background-color: var(--background-color);
}

.home-main-container {
  display: flex;
  justify-content: center;

  text-align: center;

  margin-top: 5rem;
}

.begin-quiz-form {
  display: flex;
  flex-direction: column;

  background-color: var(--primary-color);
  padding: 20px;
  border-radius: 10px;
  box-shadow: 3px 3px var(--primary-hover);

  color: var(--text-color);
}

.begin-quiz-form h1 {
  margin: 0.5rem 0;
}

.begin-quiz-form h3 {
  margin: 1rem 0;
}

.begin-quiz-form a {
  text-decoration: 0;
  color: #ffff33;
}

.begin-quiz-form input {
  /* margin: 1rem 0; */
  height: 2rem;
  padding: 0px 1rem;
  border-radius: 10px;

  border: none;
}

.begin-quiz-form .validation-error-container {
  margin: 0.5rem 0;
  font-size: 0.8rem;
}

.begin-quiz-form button {
  background-color: var(--secondary-color);
  height: 2rem;
  border: none;
  border-radius: 10px;
  color: var(--text-color);
  margin: 1rem 0 0 0;
}

.begin-quiz-form button:hover {
  background-color: var(--primary-hover);
}

.quiz-container {
  display: flex;
  flex-direction: column;

  height: 100vh;
  height: 100svh;

  overflow: hidden;

  text-align: center;

  color: var(--text-color);
}

.quiz-header {
  background-color: var(--primary-color);

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.song-title {
  margin: 0;
  padding: 0.5rem 0;
  font-size: 1.2rem;
}

.header-side-content {
  margin: 0;
  padding: 0 0.5rem;
  font-size: 0.8rem;
}

.lyrics-container {
  padding: 0 1rem 20rem 1rem;

  flex-grow: 1;
  overflow-y: scroll;
}

.missed-word {
  color: var(--missed-word-text-color);
}

.user-input-container {
  display: flex;
  flex-direction: row;
  background-color: var(--secondary-color);
  padding: 0.5rem;
  position: relative;
}

.end-quiz-button {
  background-color: var(--secondary-color);
  border-radius: 50px;
  border: none;

  margin: 10px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;

  text-align: center;
  padding: 0 1rem;

  color: var(--text-color);
}

.end-quiz-button:hover {
  background-color: var(--primary-color);
  cursor: pointer;
}

input.answer-input {
  flex-grow: 1;
  width: 100%;
  border: none;

  font-size: 1rem;
  padding: 0.5rem 0rem;

  background-color: var(--secondary-color);
  color: var(--text-color);
  text-align: center;

  border-radius: 0;
}

textarea:focus,
input:focus {
  outline: none;
}

input.answer-input::placeholder {
  opacity: 0.75;
  color: white;
}

@media screen and (min-width: 600px) and (min-height: 600px) {
  .song-title {
    font-size: 1.75rem;
    padding: 0.8rem 0rem;
  }

  .header-side-content {
    font-size: 1.2rem;
    padding: 0 0.8rem;
  }

  .input-container input {
    font-size: 1.5rem;
    padding: 0.8rem 0;
  }
}

.modal-overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  overflow: hidden;
}

.modal-container {
  background-color: var(--background-color);
  position: relative;

  margin-top: 50px;
  padding: 20px;

  width: 300px;

  border-radius: 10px;

  border: rgba(200, 200, 200, 0.8);
  color: var(--text-color);

  display: flex;
  flex-direction: column;
  text-align: center;

  transition: transform 0.3s ease;
}

button.close-modal-button {
  position: absolute;
  top: 0;
  right: 0;

  margin: 10px;

  border: none;
  background-color: rgba(0, 0, 0, 0);
  color: var(--text-color);

  border-radius: 15%;

  display: block;

  z-index: 10;
}

button.close-modal-button:hover {
  background-color: rgba(255, 255, 255, 0.25);
}

.modal-container h1 {
  margin: 0.5rem 0;
}

.modal-container h3 {
  margin: 0.5rem 0;
}

.modal-container button.menu-button {
  border-radius: 50px;
  border: none;
  padding: 0.3rem 0.6rem;
  background-color: var(--primary-color);
  color: var(--text-color);
  margin: 1rem 0;
}

.modal-container button.menu-button:hover {
  background-color: var(--primary-hover);
  cursor: pointer;
}

.modal-container button.menu-button:disabled {
  background-color: #aaaaaa;
}

.spacer {
  flex-grow: 1;
}

.end-navigation {
  display: flex;
  justify-content: space-between;
}

button.end-control {
  width: 47%;
}

